--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "hex-encode-decode": "^1.0.0",
+    "himalaya": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.66.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
